KAlarm Change Log

=== Version 2.0.2 --- 4 August 2008 ===
- Set KDE sound files directory as default for picking sound files.
- Fix width of buttons containing only an icon.

=== Version 2.0.1 (KDE 4.1) --- 17 July 2008 ===
- Double click in template dialogue list activates template edit dialogue.
- Fix KAlarm quitting on closing message window when no main window visible.
- Fix KAlarm crashing when quitting.

=== Version 2.0.0 --- 7 July 2008 ===
- New facility to use multiple alarm calendar resources.
- Add facility to select time zone for alarm times.
- Handle summer/winter time changes correctly.
- New option to trigger a recurring alarm only during working hours.
- Add option for display alarm text to be generated by a command.
- Provide "Don't show again for this alarm" option for command error messages.
- Alarm edit dialogue layout improvements.
- Make alarm edit and preferences dialogues scrollable if too high for screen.
- Choose new alarm/template type from menu instead of in alarm edit dialogue.
- Add option to show alarm windows in centre of screen, with buttons initially
  disabled to prevent accidental acknowledgement.
- Remove alarm daemon (kalarmd) and do alarm monitoring in KAlarm itself.
- Remove --handleEvent command line option.
- Use custom properties instead of CATEGORIES in calendar events for KAlarm data.
- Don't discard non-KAlarm custom event properties when editing alarms.
- Use kconf_update to convert old config file settings.
- Change numeric codes in config file to strings for long-term maintainability.
- Rename Defaults section options in config file.
- Fix detection of yearly February 29th recurrences on Feb 28th or Mar 1st.

=== Version 1.5.3 --- 16 June 2008 ===
- In New From Template menu, show list of template names in sorted order.
- Fix recurrence count being lost when using alarm templates.
- Prevent invalid negative values appearing in 'Time from now' edit field.
- Fix time shown in alarm edit dialogue for recurring alarms.