@@ -144,13 +144,13 @@
     </entry>
     <entry name="Base_EmailFrom" key="EmailFrom" type="String">
       <label context="@label">'From' email address</label>
-      <whatsthis context="@info:whatsthis">Your email address, used to identify you as the sender when sending email alarms. Enter "@ControlCenter" to use the email address set in the Control Center, "@KMail" to allow choice of KMail identities, or enter the actual email address otherwise.</whatsthis>
-      <default code="true">KAMail::identitiesExist() ? QLatin1String("@KMail") : QLatin1String("@ControlCenter")</default>
+      <whatsthis context="@info:whatsthis">Your email address, used to identify you as the sender when sending email alarms. Enter "@SystemSettings" to use the email address set in System Settings, "@KMail" to allow choice of KMail identities, or enter the actual email address otherwise.</whatsthis>
+      <default code="true">KAMail::identitiesExist() ? QLatin1String("@KMail") : QLatin1String("@SystemSettings")</default>
     </entry>
     <entry name="Base_EmailBccAddress" key="EmailBccAddress" type="String">
       <label context="@label">'Bcc' email address</label>
-      <whatsthis context="@info:whatsthis">Your email address, used for blind copying email alarms to yourself. If you want blind copies to be sent to your account on the computer which KAlarm runs on, you can simply enter your user login name. Enter "@ControlCenter" to use the email address set in the Control Center, or enter the actual email address otherwise.</whatsthis>
-      <default code="true">QLatin1String("@ControlCenter")</default>
+      <whatsthis context="@info:whatsthis">Your email address, used for blind copying email alarms to yourself. If you want blind copies to be sent to your account on the computer which KAlarm runs on, you can simply enter your user login name. Enter "@SystemSettings" to use the email address set in System Settings, or enter the actual email address otherwise.</whatsthis>
+      <default code="true">QLatin1String("@SystemSettings")</default>
     </entry>
     <entry name="Base_CmdXTermCommand" key="CmdXTerm" type="String">
       <label context="@label">Terminal for command alarms</label>
